--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,20 +1,15 @@
-#jpa:
-#  hibernate:
-#    ddl-auto: update
-#
-#spring:
-#  datasource:
-#    url: jdbc:mysql://127.0.0.1:3306/feeds
-#  username: admin
-#  password: admin
+jpa:
+  hibernate:
+    ddl-auto: update
+
+spring:
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/feeds?serverTimezone=UTC
+    username: admin
+    password: admin
 
 feeds:
   scheduler:
     rate: 60000
-
-feign:
-  client:
-    config:
-      FeedsNosClient:
-        connectionTimeout: 10000
-        readTimeout: 120000
+  nos:
+    url: http://feeds.nos.nl/nosjournaal?format=xml
